--- a/src/page/style.css
+++ b/src/page/style.css
@@ -1,9 +1,23 @@
 
+html{
+    height: 100vh;
+    overflow: hidden;
+    width: 100vw;
+}
 
+body, #page, #root{
+    width: 100%;
+    height: 100%;
+}
 .regexInput{
     border-top: 0px;
     border-left: 0px;
     border-right: 0px;
+}
+
+#content{
+    position: relative;
+    height: 100%;
 }
 
 .regexInput:focus{
@@ -20,4 +34,41 @@
 #regexLabel{
     margin: auto;
     color: #6c757d;
+}
+
+.diagramContainer {
+    position: absolute;
+    bottom: 10px;
+    height: 40vh;
+    width: 100%;
+    border-top: gray solid 1px;
+    overflow: auto;
+}
+
+/*svg{
+    display: block;
+    height: 500px;
+    width: 100vh;
+    margin: auto;
+}*/
+
+#vizwrapper{
+ /*display: flex;  DO NOT USE THIIIIIIIS. IF THE WRAPPER IS A FLEX THE SVG STARTS SCALING BUT OVERFLOW:AUTO DOESN'T DETECT IT CORRECTLY. 
+    IT DOESN'T MAKE ANY SENSE BUT SOMEWHOW I GOT IT TO WORK. DON'T TOUCH IT EVER AGAIN!!!!!!!!!!!!!!!! */
+  align-items: center;
+}
+
+#diagramWrapper{
+    /*display: flex; */
+    align-items: center;
+    height: 100%;
+    width: 100%;
+
+}
+
+#nfaHeader{
+    display: inline;
+    position: sticky;
+    top: 5px;
+    left: 0px;
 }
