--- a/src/page/style.css
+++ b/src/page/style.css
@@ -9,6 +9,12 @@ body, #page, #root{
     width: 100%;
     height: 100%;
 }
+
+#page{
+    display:flex;
+    flex-direction: column;
+}
+
 .regexInput{
     border-top: 0px;
     border-left: 0px;
@@ -16,8 +22,11 @@ body, #page, #root{
 }
 
 #content{
-    position: relative;
-    height: 100%;
+    margin: 10px 10px;
+    height: 50vh;
+    display:flex;
+    flex-direction: column;
+    overflow: hidden;
 }
 
 .regexInput:focus{
@@ -27,6 +36,13 @@ body, #page, #root{
     box-shadow:none !important;
 }
 
+.textInput{
+    width: 70vw;
+    min-width: 70vw;
+    margin-right: 10px;
+    height: 100%;
+    resize: none;
+}
 .textInput:focus {
     box-shadow:none !important;
 }
@@ -37,14 +53,24 @@ body, #page, #root{
 }
 
 .diagramContainer {
-    position: absolute;
-    bottom: 10px;
-    height: 40vh;
-    width: 100%;
+    height: 45vh; /* For some reason the svg doesn't have a vertical scrollbar if I dont set an specific height here rather than just "100%" */
+    width: 100vw;
     border-top: gray solid 1px;
     overflow: auto;
 }
 
+.inputContainer{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    margin-top: 0px !important;
+}
+
+#inputResultContainer{
+    display: flex;
+    overflow: auto;
+    height: 100%;
+}
 /*svg{
     display: block;
     height: 500px;
@@ -61,14 +87,29 @@ body, #page, #root{
 #diagramWrapper{
     /*display: flex; */
     align-items: center;
-    height: 100%;
     width: 100%;
 
 }
 
-#nfaHeader{
+#nfaHeader, #resultHeader{
     display: inline;
     position: sticky;
     top: 5px;
     left: 0px;
+}
+
+
+.result{
+    word-wrap: break-word;
+    overflow: auto;
+    margin-top: 10px;
+
+}
+
+.logo{
+    margin-left: 10px;
+}
+
+.resultSection{
+    overflow: hidden;
 }
