--- a/src/page/style.css
+++ b/src/page/style.css
@@ -163,3 +163,8 @@ body, #page, #root{
     justify-content: center;
     align-items: center;
 }
+
+.animationWarning{
+    color: #6c757d;
+    font-size: 13px;
+}
